@@ -2,17 +2,27 @@
 Hash: SHA256
 
 DIST fcitx-anthy-0.1.1.tar.xz 68604 SHA256 c508068c7c9a56c26ea44b8e6ddb90a2ea75860031f89e171dcda8ec4cd08955 SHA512 e2c4bb20f0b0a370e5f28bff14312c2c14210695418438ebe697b94570fe502be8c96dc8fbf813fd3aa6e352283a7d31808a1f12266d4a8050646a8ae86de9d9 WHIRLPOOL 48f674ef23d62f2dc1286712cbb252d709d9e3890921d1f9296ff89f85c5ae211daa887841fc01f267fe44764275e8b6de4aef859d9f1456cb24f00023b262ce
-DIST fcitx-anthy-0.2.0.tar.xz 71004 SHA256 0695a227bb6025e9f772b2f1e3c605c6f96fc417636b3074f806ac3159fa0967 SHA512 f5eb22464d8c6ab56d8328fd931186b1966d64314f8aaa818a2ddb3684a36ca975cd9e96e4ec775cd5fce3c98e1d62f7d3f673036ed417a85ca02c7d34256dc9 WHIRLPOOL f2e5daf74b10bbd40796e0444c9689a643930e59bcfb118630c76759d35b213adbfe89f3369290f8452c0a8544b2dc4a325f41220f8b7bac8e4cfa7bf19b8ea2
 DIST fcitx-anthy-0.2.1.tar.xz 72196 SHA256 fd208474666f09f1c189c10c2c0fa9cfda33948b704410e02878fdd92174d78d SHA512 18599251d6ebda96a23f81f63d91e9a9d469d2ea534975c2f4ddbc80584d70646ac6d157d0571f9d48565c0cfd1bb111e2907cae2c00b750014b9f39a7bcf961 WHIRLPOOL 99632911a7831ce24c7535b0e0a249cbbc48b24ec44682f6a09e3dc0a61d7eb74363642098158cc409c3390fb141d03591f1e1b1b3683164d4d6002fe9c92769
 EBUILD fcitx-anthy-0.1.1.ebuild 667 SHA256 ea67dcd425c8c798cabdba5cda03abb7fb4cbc9b59d51fb0c4612e4751399064 SHA512 1c0883e5675d5abe84ab57010db61e43942d034ab80719c33fa43047be5dab8a90ad37e033a3f51695f3670c66cf8aadd69c4b13af76ee116084e512de00e387 WHIRLPOOL b0cfd9fd99f53a9d9b20e1a7522e2ef1fe7fded014c681f18874decdf3cd161e7fed775381112ec6bba61193525eac1af69127ecd241e33ab7bd77f9b9449534
-EBUILD fcitx-anthy-0.2.0.ebuild 670 SHA256 809efef3facac49a463bbc096350f63da106087d541db430a3df4fae83abb97f SHA512 2fec32ff6b9add5d55c3c917a89a0c31a736e245efb0c3c4891689d482bb2e2bbbd4ffe2390cc879bc0820818c4970161ec942d0fa2e59b66aa2157c219bc32f WHIRLPOOL 19879c12436f7962e76a25c539a26266f823e9c138f4076f0cc946b3f5cf1729e470850e21e058b07947ae5305b7bfe58a2d60586b934888fe77e446229b7e01
-EBUILD fcitx-anthy-0.2.1.ebuild 665 SHA256 9535b05a2dca2d38d82da489c35e1ccf99b393a62329704e1e26d8b77c154042 SHA512 a88155f9887f5a5a4964c132e74b502ba54693fb0a7a45e98124237181aefb4049d857a41c09e916b0ad4326de3459c1c7195792666ae1d574e8bc65cde87846 WHIRLPOOL 108670ce2719d3e595fbf6a54e8a10cb7830bb4203b769cafecf6810b6355d497d617cb9841da2c044d47a331cbd41dff91dae36d87ecf7f1806f0b0860ee04f
-MISC ChangeLog 1382 SHA256 ff46c55fc82b1c58f457a35b0e0b4e170ceb063b96ab8225f09befca13a801c7 SHA512 5b6c622d3d48c45ec2639aa960ba2538cdcd517cfef99461e2515c91abe52fc9e0116b7a4a06545254195b37384e766f840796259e41cd31a7c9adc47f55d272 WHIRLPOOL a8509af81c1b538ae4bcde7a11c1dad183bec1859c6cd46a0daa94aaf15758d34118852905c1da3b4a97fa31440cacd48883573944d9e351b8125cf380618f40
+EBUILD fcitx-anthy-0.2.1.ebuild 667 SHA256 885326b61a8e7cb666f432bf4d41cf8e2ce1bd1d2773649a6dff1941a10a8e09 SHA512 a9224628239ebf7f1f0c70c959e7b52563266dffc5b4a4ead6c932efde4d4fc66d52eaded8912175bc6601ff03f7d8f4f2cae137a7728927d43120afcc2a0495 WHIRLPOOL a96278059c0f413570a5f63b76e0b63a59cb3fefa5ed82e57cb8118e1c9a91f9dd69fa356dbd7e74a2aa30b991d12624ab49c5a5850764c4bf766dd6a4052d58
+MISC ChangeLog 1546 SHA256 bb0fe2c154f94786e5c0f6644ce7c5b43cae2c70aeb05b461178c57320cdafc8 SHA512 484fdd99f466dd0bda039a267cfdc5e51fc1a240b152a157ea73946046f8d3fc3811399ca031f82453645e76773803399c8f84fd2a42b643a4559553ab8da2a7 WHIRLPOOL c807284e9424a581e9b76344d3b654a0b40591ac0070fb7600a697272b8ec453234b5fe8235e87659857f8c4ea593b5dd134a8bfe435c5f2219e8704c97a4645
 MISC metadata.xml 158 SHA256 18d71c580f82a389887f4970802b5f40e0a2e4c6019117e64268e008dfb81fc8 SHA512 6198c41a4d69a5ca0029aa9a593cc0ea553dc957fc0bdcd7bcd3bd1af7f84c5feaaf785160b60b8ed75282987818a6367f6092523cacd45f0c35494036043550 WHIRLPOOL 478bed9e1c3fbbcb13f17ffeebc2b9da5f3c48368e8a95c2802a88dbef4773f992fa254e4dc460248d5669021fe4e37b37be522d186da9d97321a58437679662
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2
+Version: GnuPG v2.1
 
-iEYEAREIAAYFAlVDDnwACgkQVWmRsqeSphOfCACcDzbLwkDbSHFtP6o8iP+nCyiF
-fRIAnR5y/e++cir3fpy/hBz7lPlpt5cW
-=r1+s
+iQJ8BAEBCABmBQJVTf09XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ5MTlDREQ0NUU5Mjc4RkU2RjJDNTAyNzU0
+RkRGOUNGRDJGQUM1MTRFAAoJEE/fnP0vrFFO558P/j64DSNUd5AlAwxa0q1LqJJG
+voyzqFMP6lKgyXstlO+x0ET1hqNZDpfhS9/NGqvFznicVqHlzkxacH4Uu01vdTv2
+R+5vpPbJ/qqZuLXW3YIcrSlZNfLEMltYflYTnXvla6BtU3VjB390TnCBjwXRSiR0
+/8SvR0jF5CtmQuSTOxGxxIgBIsz5T7BK6iR3Xgj591szItA7CaVtFtm6ZpoABOfl
+jNso6dJJlzXGTbrjG3AWfmownMiOtADqfvPw4S09mFSZvaii47Qcs5BW9JrCm3WK
+Fqs2jwQEBsX3/AlKqxlOwh+dJryuzThajNvd5dUa3Vmy08OYxnM9E4Ct81SGAvwY
+TzoeeOHpFRc0AsSWfWYuzrZkNJRcj5Yih265uJF4zoPdIcOWX5skq25DX3oKQ6Rk
+R78/viGAvlFKxVQBGQxFXy6HAebzQINxsJ5IIWyVSIrQIYojMZ67E2AhouZXvn74
+pyJwxJSR5R3QzWjwjXcCPqnkmvRaRtEMwWnd9AxOelPW0DsaJUF0udz/1rUccBZ6
+fudPDlXwzZ6St65V6c090Id+Ea1mRxACMcx4vBzHIW1CvZAGdoXYGHSrP5Dz2vAn
+ERKEGrrOcCEjHQtdwwzSajcbPGpGU1mOoatkwePO4/vLwJxSI9+rJDlZb6vD/sSf
+C0VpchvhLi9Iw3wRK3QG
+=GWjT
 -----END PGP SIGNATURE-----
