@@ -1,27 +1,26 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST fcitx-qt5-0.1.2.tar.xz 44788 SHA256 427fdf6eacd2fea30085bd7d0157a9b2009597ada601233ecf020194cce5a157 SHA512 e1e9ca1eab6515dab33be3632136d2f4bb1779b5995f19f8767bdb3422074e1e73d7ff412838f490164ebb4db1d84db28e16e39cdd67d115da244709480c4048 WHIRLPOOL 2c67e9d17fd6862be85077f90c9a90f87250c849d45be170f2d6cf1ce77456692b69929acc1e1ffccdf0d217bf12c37f69387bed7b61f4c3c8af944afb0d4570
-DIST fcitx-qt5-1.0.0.tar.xz 68568 SHA256 eeddfeff265d8080aabeb5d8f00c4085582b5e63023a5402fcf9d423d038a800 SHA512 12ed93e214ea23e10e129875d2e6faef266d42a3cc8a942e23dd3d41f5df0f570c4523e73c7819553f84c8990ae96a5d951f41c6c40f4b9e06192beee37f591b WHIRLPOOL 22881111c5215d5b3a5b7105817612be728ed6fa955db8ba48d01371998329420c240f48f9a86d1eb58d73a666430785aecc039c8d3a82108ce5aaac95b5e60d
-EBUILD fcitx-qt5-0.1.2.ebuild 543 SHA256 8c2575fb184abbcd3f96980c0efa84e069741dfe8e6f2e2015e1994d987fe11c SHA512 43f9e5fe4714482018d15ac74ccf70a809555bca8fb5d83df18aff0bb1ce15ff7c7aa8ddf46896d82d8f6fab3e7e7836236f52fa53a1564ad5aa159feadf9e59 WHIRLPOOL f72a08fde7cabfe9f89ee3afb94d09916937b0c88e17104bc69a93365aa5d78652016196714dbcacc7f01ba7689b8e282af9d1b54fdbed10cd9c5cad86ef4573
-EBUILD fcitx-qt5-1.0.0.ebuild 603 SHA256 3a292e6fcfa712e9822e4ba6cd5344b5cd48656e0e3e8f68ccd82958c881a971 SHA512 de217cf2476baecebd5a08308cd8d0d584b2022f42cc8ce770651cddd78c2f9019475b8e8588403be5352433e7450511d2213d1817ba917b1bb196598c298261 WHIRLPOOL b2507c309fa112796b4b0d5d5a8b9c14fdc7931eacdaf5611ea1fa1bd1baf0eece3d51d299ea1eca5bb0a1075c8266f17c735e29a75e4bfefb813209205d328c
-MISC ChangeLog 662 SHA256 f892646be986d0e4b126e04556373b828d8262b08760872faa3330bd1d268342 SHA512 9ba487a7b488c63c5f5b2e7679cdcf7d82493b4b512e4ecb1e7613eaa7d87e4e4b0ae68f5fa081f396d2cda12866cac72eeb0470f76c42a205de398ad4c14b40 WHIRLPOOL 7f95db0ea7b79bc59e736ab793cc95d1b688527250da4e4d1797d067b9488c6e61445c3c3abccab1f19f9df69717fcb7a0a2fcc4c72e05fff9db089a5142d92a
+DIST fcitx-qt5-1.0.2.tar.xz 53324 SHA256 b8073f07d9384878c616f6d2cea44fc739a3b5731b95b10b3133e0914d49f66d SHA512 f7075d5334e29fd00c54563182c9cc4027011503aa14d577aa2fb75eb8558c385d91c939f1f21e51850c9c64fc5c396aad5b32fdcc8ddd99c46ec74bd577255d WHIRLPOOL 35ae384cf13fdfdb86c34b7dbefbbe780a2c20ac220868824e25a0ba4368581c19d45cbc9447e1c2dd3236b0758ee9e4311dab1f348a524ca2d002d0b43c760c
+EBUILD fcitx-qt5-1.0.2.ebuild 599 SHA256 5137c61d0c1ff473df88e788d379b0b1fe26416b6d11d4e9ef290f83f2b3fee6 SHA512 51874ab0e2da5634a5a0bb36e19164a4a2fcb6088d4cc4a0d93b4c3bc0f649624c538f1713ce5f9e1110f697da4ff76f58990a896924c2d3e010fe5863cd991b WHIRLPOOL 608695c72637553dac68d17ca189298192b88254ccafdccd48805ee1e3163bd075b8bc62c7d25e25eb60bea248a6ea688398920b6dd209f98ad3613d52228756
+MISC ChangeLog 843 SHA256 e89e001966ce223ad3334738870444dca20664da57c0b0d64b11de32fc26f3cb SHA512 714b955d8a859889a2af1d47882c3d06e5a056a8011a11b191c867997c91f90a8fcffc65bcc891b452a34d04feea31d75c8cb16ff9bff837ee6adab3bf648407 WHIRLPOOL 0e9661f71dfaaf03bf5b68167c5f8442112fc0d7f94b6c82f1cdb5ef0eb1e82a5ed81fd44dd859827fe61f83278b157c50cf4cbf9e840da9cc8d8c15bd38916b
 MISC metadata.xml 158 SHA256 18d71c580f82a389887f4970802b5f40e0a2e4c6019117e64268e008dfb81fc8 SHA512 6198c41a4d69a5ca0029aa9a593cc0ea553dc957fc0bdcd7bcd3bd1af7f84c5feaaf785160b60b8ed75282987818a6367f6092523cacd45f0c35494036043550 WHIRLPOOL 478bed9e1c3fbbcb13f17ffeebc2b9da5f3c48368e8a95c2802a88dbef4773f992fa254e4dc460248d5669021fe4e37b37be522d186da9d97321a58437679662
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0
+Version: GnuPG v2.1
 
-iQJhBAEBCABMBQJVKUzYRRSAAAAAABQAKGlzc3Vlci1mcHJAbm90YXRpb25zOTc5
-MTY5NkQ3RDM3NkRBN0U5QjZGMTUwMDZCMUYzOERDQTQ1QTFFQwAKCRAGsfONykWh
-7EnoD/dKeCtK4dXu61V3eEHX73kYsnifjN4/fZ6b26XHvTv6c6MqmBdqY0grrsnq
-mcZM6PLrxu1XhLPo2wT7EKNiRu4khwL9Y6EOJ4WPAlrfoPIpsr0p6z5gSGMY3YqN
-+Oq8NdveoTq0nvgbcK85MwQI3xxYakKW+dg07JXvDQ5MJpNNdzKWv2yJSiJdIpbD
-sNXyJ8Qttfv4uxCYEoZj5Q20qAR4+nMDBXg1vYZo9Z23XVNyjkgrJPtcecNdM3dv
-+lfUdaD5OCxbvCQhfqenVewPb3VPghhFthXI9C85gcUh6DpZvxRnPtWI9+6HonfD
-xHiCFW4zhPaRhI14/FEGtgthC8ter65X8OY/sJxuaC967e346bP6UEUUNHRMCmqy
-zHky6BQ8X1ZP+UjB4rhubLidRo428+B6XFaeNH8k9BgONRbFm45x2T4UBPC/CF/h
-uvzK3uOqvaYIpumeRAidY2ivkTMJbJrJ4EAQbukL/wIJPJVeUpPra0VQssfGl5t+
-d7H77j/SI7aKSFcsx284TmRdgqImqUiCYCPS/jNSbMu52Cwy/PBoxTGNzond8KZC
-8V6OTNNhYxGVx27TMxGcjBvvSrFr7ENaG7zo1leuLKur9sBCH+G08CXKBIeKBDxl
-xVYs6I3pOiHZtq8JMxqV6Pkcq83B4i/1p2kQXkqJm0saDvWm
-=92+n
+iQJ8BAEBCABmBQJVTfcKXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ5MTlDREQ0NUU5Mjc4RkU2RjJDNTAyNzU0
+RkRGOUNGRDJGQUM1MTRFAAoJEE/fnP0vrFFORUYP/1pl272/XSBFOzLvPJxod38f
+VdeTMFpjshHs+uNyOjrQSa8RVaxSevG8uBJ17x0Xn/THUYG3ABiCS2mf7dSCeYHk
+CUKGEniWrte1Wpe4PRKddO9eg75ZvTZq8HCnlMZRVPvJqXhHi4Krcs0J6CwbYnkO
+BDelkWAyowFrIeBmnbUwWEndrDhhS4b387W7WXCXI51zahi2Fs1XSYWZnUh3JxF8
+w8FBzUHpgy8+bEfgNMDgkkGmnw/D1ORTEgoDS6u4b9tsWZrjb9MbtU/lavy/GGqP
+yseJYzoEyX9KFVeXK+Dh+4TkbYJCDmXv/aZd/zv4H5zucTwZ0R3+GOSkVxY5+SWY
+aMC0KLQ79E/myPK5rPzK4Y3xj3B2FTprf1n5HwIgoGbbuY2jTI71hpMc0dicrlps
+oeTscnyQ65eXrwjQCFKgmyyHvKyhmwaM7hVtuXfKhV7SBAAEryRsTBe+MFDjMI/r
+wda3FyKO4VVcgV/0SOaNk6T+VN0c8bc1qM5N3osfb0XRIGK9kUECW+oSfL3XjJ+x
+Jrq9k/vpFL6pK51n2AXgIjg1aiCU1L0jS3KwYZPvXBEAoeFTBWRUpVPwcsy9nFFu
+QBAirsYKZ0bFqLXIl69GM5vnXJ7V57+BnYmIM3IAdEUXRoz7iPghweRR0H5WLLwJ
+dMNElZdqWi+JIJDgfrYS
+=8Jc/
 -----END PGP SIGNATURE-----
