@@ -1,12 +1,0 @@
-DEFINED_PHASES=compile configure install postinst postrm prepare test
-DEPEND=>=app-i18n/fcitx-4.2.8 app-i18n/anthy sys-devel/gettext virtual/libintl sys-devel/make >=dev-util/cmake-2.8.12 userland_GNU? ( >=sys-apps/findutils-4.4.0 ) >=sys-apps/sed-4
-DESCRIPTION=Japanese Anthy module for Fcitx
-EAPI=5
-HOMEPAGE=http://fcitx-im.org/
-KEYWORDS=amd64 ~ppc ~ppc64 ~x86
-LICENSE=GPL-2
-RDEPEND=>=app-i18n/fcitx-4.2.8 app-i18n/anthy
-SLOT=0
-SRC_URI=http://download.fcitx-im.org/fcitx-anthy/fcitx-anthy-0.2.0.tar.xz
-_eclasses_=cmake-utils	0430c386d85cec959d72640afd63ea91	eutils	9fb270e417e0e83d64ca52586c4a79de	flag-o-matic	5d5921a298e95441da2f85be419894c0	gnome2-utils	5cdfd22a2163c9d3a891648bd19453a7	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92
-_md5_=b76b3c019804073182d1ad689a9c470f
