@@ -1,12 +1,0 @@
-DEFINED_PHASES=compile configure install prepare test
-DEPEND=>=app-i18n/fcitx-4.2.8 dev-qt/qtcore:5 dev-qt/qtdbus:5 dev-qt/qtgui:5 sys-devel/make >=dev-util/cmake-2.8.12 userland_GNU? ( >=sys-apps/findutils-4.4.0 )
-DESCRIPTION=Qt5 input module for Fcitx
-EAPI=5
-HOMEPAGE=http://fcitx-im.org/
-KEYWORDS=~amd64 ~x86
-LICENSE=GPL-3
-RDEPEND=>=app-i18n/fcitx-4.2.8 dev-qt/qtcore:5 dev-qt/qtdbus:5 dev-qt/qtgui:5
-SLOT=0
-SRC_URI=http://download.fcitx-im.org/fcitx-qt5/fcitx-qt5-0.1.2.tar.xz
-_eclasses_=cmake-utils	0430c386d85cec959d72640afd63ea91	eutils	9fb270e417e0e83d64ca52586c4a79de	flag-o-matic	5d5921a298e95441da2f85be419894c0	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92
-_md5_=9c56393f226146ada67e887bcf5bdc07
