@@ -7,6 +7,6 @@ KEYWORDS=~amd64 ~x86
 LICENSE=GPL-3
 RDEPEND=>=app-i18n/fcitx-4.2.8 dev-qt/qtcore:5 dev-qt/qtdbus:5 dev-qt/qtgui:5 dev-qt/qtwidgets:5 kde-frameworks/extra-cmake-modules
 SLOT=0
-SRC_URI=http://download.fcitx-im.org/fcitx-qt5/fcitx-qt5-1.0.0.tar.xz
+SRC_URI=http://download.fcitx-im.org/fcitx-qt5/fcitx-qt5-1.0.2.tar.xz
 _eclasses_=cmake-utils	0430c386d85cec959d72640afd63ea91	eutils	9fb270e417e0e83d64ca52586c4a79de	flag-o-matic	5d5921a298e95441da2f85be419894c0	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92
-_md5_=6f28955fb610a453a4806f67c45bdb54
+_md5_=1c93093cd830a250b7b347ef64721e40
